update home page?

--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://listentoripley.github.io/music-app/"
+  "homepage": "https://listentoripley.github.io/music-app/public/index.html/"
 }
