--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.1.0",
     "npm-reinstall": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -15,6 +16,8 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://listentoripley.github.io/music-app/public/index.html/"
+  "homepage": "https://listentoripley.github.io/music-app/"
 }
