--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://listentoripley.github.io/music-app/",
+  "homepage": "https://listentoripley.github.io/music-app/",
   "name": "music-app",
   "version": "0.1.0",
   "private": true,
@@ -36,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
